--- a/HealthMap/WebContent/css/style.css
+++ b/HealthMap/WebContent/css/style.css
@@ -22,6 +22,7 @@ button {
 	display:flex;
 	justify-content:space-between;
 	align-items: center;
+	font-size:1.5em;
 }
 
 input[id="menuicon"] {
@@ -85,7 +86,7 @@ div[class="sidebar"] {
 	padding:12px;
 }
 
-.loginbtn {
+.logoutbtn {
 	position:absolute;
 	right:0;
 	top:0;
@@ -133,7 +134,7 @@ input[id="menuicon"]:checked + label + div {
 
 #map {
 	width: 100vw;
-	height: 95vh;
+	height: 92vh;
 	z-index:0;
 }
 
@@ -143,16 +144,19 @@ div[class="lowbar"] {
 	background:#fff;
 	position:fixed;
 	left:0;
-	bottom:-45%;
+	bottom:0;
 	background-color:#aeaeae;
 	border:1px solid #eee;
 	z-index:1;
-	transition:all .35s;
 	padding: 8px 12px;
 }
 
-input[id="lowbarbox"]:checked + div {
-	bottom:0;
+div [class="lowbarOver"]{
+	width:100%;
+	height:47%;
+	position:fixed;
+	left:0;
+	top: 8vh;
 }
 
 .facility {
@@ -162,6 +166,8 @@ input[id="lowbarbox"]:checked + div {
 	border:1px solid #eee;
 	justify-content:space-around;
 	margin:1em;
+	align-items:center;
+	font-size:1.3em;
 }
 
 .facilitybtn {
@@ -189,6 +195,7 @@ input[id="lowbarbox"]:checked + div {
 
 .machine {
 	list-style:none;
+	width:100%;
 	height:5%;
 	border:1px solid #000;
 	align-items:center;
@@ -216,4 +223,60 @@ table tr th {
 	height:auto;
 	padding:1em;
 	border:1px solid #000;
+}
+
+.adminMain {
+	height:92%;
+    display:flex;
+    flex-direction:column
+	
+}
+
+.adminMain div {
+	flex:1;
+    line-height:160px;
+	text-align:center;
+	font-size:2em;
+    border:1px solid #000; 
+}
+
+.machineContent {
+	height:92vh;
+	display:flex;
+	flex-direction:column;
+}
+
+.machineContent img {
+	display:block;
+	margin:0 auto;
+}
+
+.addMachine {
+	height:45vh;
+}
+
+#machine-select {
+	font-size:1.5em;
+}
+
+.machine-options {
+    text-align:center;
+    margin:1em auto;
+}
+
+.machine-count {
+	margin:1em auto;
+	font-size:1.5em;
+}
+
+.button-align {
+	border:1px solid #000;
+	padding:0.5em;
+	font-size:1.3em;
+	display:block;
+	margin:1em auto;
+}
+
+.gymContent div {
+	margin:1em
 }
