--- a/HealthMap/WebContent/css/style.css
+++ b/HealthMap/WebContent/css/style.css
@@ -25,68 +25,30 @@ button {
 	font-size:1.5em;
 }
 
-input[id="menuicon"] {
-	display:none;
-}
-input[id="menuicon"] + label {
-	display:block;
-	width:30px;
-	height:25px;
-	position:relative;
-	cursor:pointer;
-	z-index:3;
-}
-input[id="menuicon"] + label span {
-	display:block;
-	position:absolute;
-	width:100%;
-	height:4px;
-	border-radius:30px;
-	background:#fff;
-	transition:all .35s;
-}
-input[id="menuicon"] + label span:nth-child(1) {
-	top:0;
-}
-input[id="menuicon"] + label span:nth-child(2) {
-	top:50%;
-	transform:translateY(-50%);
-}
-input[id="menuicon"] + label span:nth-child(3) {
-	bottom:0;
-}
-input[id="menuicon"]:checked + label span:nth-child(1) {
-	top:50%;
-	transform:translateY(-50%) rotate(45deg);
-}
-input[id="menuicon"]:checked + label span:nth-child(2) {
-	opacity:0;
-}
-input[id="menuicon"]:checked + label span:nth-child(3) {
-	bottom:50%;
-	transform:translateY(50%) rotate(-45deg);
-}
-
 div[class="sidebar"] {
-	width:60%;
-	height:92%;
-	background:#fff;
-	position:fixed;
-	bottom:0;
-	left:-60%;
-	background-color:#aeaeae;
-	border:1px solid #eee;
-	z-index:1;
-	transition:all .35s;
+   width:60%;
+   height:92%;
+   background:#fff;
+   position:fixed;
+   bottom:0;
+   left:0;
+   background-color:#aeaeae;
+   border:1px solid #eee;
+   z-index:1;
+   display:flex;
+   flex-direction:column;
+   padding:12px;
 }
 
-.sidebar {
-	display:flex;
-	flex-direction:column;
-	padding:12px;
+div[class="sidebarRight"]{
+   position:fixed;
+   height:92%;
+   width:40%;
+   right:0;
+   bottom:0;
 }
 
-.logoutbtn {
+.loginbtn {
 	position:absolute;
 	right:0;
 	top:0;
@@ -115,10 +77,6 @@ div[class="sidebar"] {
 	color:#000;
 }
 
-input[id="menuicon"]:checked + label + div {
-	left:0;
-}
-
 .wrapper {
 	height:100%;
 	display:flex;
@@ -144,7 +102,7 @@ div[class="lowbar"] {
 	background:#fff;
 	position:fixed;
 	left:0;
-	bottom:0;
+	bottom: 0;
 	background-color:#aeaeae;
 	border:1px solid #eee;
 	z-index:1;
@@ -159,104 +117,105 @@ div [class="lowbarOver"]{
 	top: 8vh;
 }
 
+
 .facility {
-	height:30%;
-	display:flex;
-	flex-direction:row;
-	border:1px solid #eee;
-	justify-content:space-around;
-	margin:1em;
-	align-items:center;
-	font-size:1.3em;
+   height:30%;
+   display:flex;
+   flex-direction:row;
+   border:1px solid #eee;
+   justify-content:space-around;
+   margin:1em;
+   align-items:center;
+   font-size:1.3em;
 }
 
 .facilitybtn {
 	border:1px solid #eee;
 	display:block;
-    margin-left:auto;
-    margin-right:5%;
+	margin-left:auto;
+	margin-right:5%;
 	padding:0.3em;
 }
 
 .numberAndAddress  {
-	margin:1em;
-	display:flex;
-	flex-direction:column;
+   margin:1em;
+   display:flex;
+   flex-direction:column;
 }
 
 #all {
-	height:100vh;
-	width:100vw;
+   height:100vh;
+   width:100vw;
 }
 
 #middleSection {
-	height:60%;
+   height:60%;
 }
 
 .machine {
-	list-style:none;
-	width:100%;
-	height:5%;
-	border:1px solid #000;
-	align-items:center;
-	display:flex;
-	flex-direction:row;
-	justify-content:space-around;
+   list-style:none;
+   width:100%;
+   height:5%;
+   border:1px solid #000;
+   align-items:center;
+   display:flex;
+   flex-direction:row;
+   justify-content:space-around;
 }
 
 .noticeList {
-	height:92vh;
+   height:92vh;
 }
 
 table {
-	width:100%;
-	height:10%;
-	border:1px solid #000;
-	border-collapse: collapse;
+   width:100%;
+   height:10%;
+   border:1px solid #000;
+   border-collapse: collapse;
 }
 
 table tr th {
-	border:1px solid #000;
+   border:1px solid #000;
 }
 
 .noticeContent {
-	height:auto;
-	padding:1em;
-	border:1px solid #000;
+   height:auto;
+   padding:1em;
+   border:1px solid #000;
 }
 
 .adminMain {
-	height:92%;
+   height:92%;
     display:flex;
     flex-direction:column
-	
+   
 }
 
 .adminMain div {
-	flex:1;
+   flex:1;
     line-height:160px;
-	text-align:center;
-	font-size:2em;
+   text-align:center;
+   font-size:2em;
     border:1px solid #000; 
 }
 
 .machineContent {
-	height:92vh;
-	display:flex;
-	flex-direction:column;
+   height:92vh;
+   display:flex;
+   flex-direction:column;
 }
 
 .machineContent img {
-	display:block;
-	margin:0 auto;
+   display:block;
+   margin:0 auto;
 }
 
 .addMachine {
-	height:45vh;
+   height:45vh;
 }
 
 #machine-select {
-	font-size:1.5em;
+   font-size:1.5em;
 }
 
 .machine-options {
@@ -265,18 +224,22 @@ table tr th {
 }
 
 .machine-count {
-	margin:1em auto;
-	font-size:1.5em;
+   margin:1em auto;
+   font-size:1.5em;
 }
 
 .button-align {
-	border:1px solid #000;
-	padding:0.5em;
-	font-size:1.3em;
-	display:block;
-	margin:1em auto;
+   border:1px solid #000;
+   padding:0.5em;
+   font-size:1.3em;
+   display:block;
+   margin:1em auto;
 }
 
 .gymContent div {
-	margin:1em
+   margin:1em
+}
+
+.favBox {
+	border:1px solid #000;
 }
