--- a/HealthMap/WebContent/css/style.css
+++ b/HealthMap/WebContent/css/style.css
@@ -155,7 +155,7 @@ div [class="lowbarOver"]{
 .machine {
    list-style:none;
    width:100%;
-   height:5%;
+   height:7vh;
    border:1px solid #000;
    align-items:center;
    display:flex;
@@ -176,6 +176,19 @@ table {
 
 table tr th {
    border:1px solid #000;
+}
+
+.noticeItem {
+    display:flex;
+	font-size:1.5em;
+	height:10vh;
+	border:1px solid #0f0f0f;
+}
+
+.align {
+	display:flex;
+	justify-content:space-around;
+	align-items:center;
 }
 
 .noticeContent {
